welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: value update is not a member of Int
	if( getX()=L && getY()=H){
            ^