welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {


	def posfinale(){
		var H = getMondeHauteur();
		var L = getMondeLargeur();
	if( getX()=L && getY()=H){
		return true;
	}else{
		return false;
	}
}


}
